--- a/landing.html
+++ b/landing.html
@@ -2,23 +2,30 @@
 <html>
 <head>
 	<title>CareerPath</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Abel&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
 </head>
 <body>
-	<div>
-	    <div class="btt">
+				
+		<div class="btt">
     		<a href='#'><button class="btn">Home</button></a> &nbsp;&nbsp;
     		<a href='#'><button class="btn">Page 1</button></a> &nbsp;&nbsp;
     		<a href='#'><button class="btn">Page 2</button></a> &nbsp;&nbsp;
     		<a href='#'><button class="btn">Page 3</button></a> &nbsp;&nbsp;
     		<a href='#'><button class="btn">Page 4</button></a> 
    		</div>
-    	<h1 class=tm>CareerPath</h1>
-    	<h2 class=tm1>We care for your future!</h2>
-    	<h3 class=tm2>This website is developed under GirlScript's The Uplift Project</h3>
-	</div>
-
+		<div id="particles-js">
+		
+    		<h1 class=tm>CareerPath</h1>
+    		<h2 class=tm1>We care for your future!</h2>
+    		<h3 class=tm2>This website is developed under GirlScript's The Uplift Project</h3>
+		
+			<script type="text/javascript" src="js/particles.min.js"> </script>
+			<script type="text/javascript" src="js/app.js"> </script>
+		
+		</div>
+	
 </body>
 </html>
